<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
    <string name="app_name" translatable="false">Fitness Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="lap" translatable="false">Lap</string>
    <string name="pause" translatable="false">Pause/Stop</string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>
    <string name="start" translatable="false">Start</string>
    <string name="waiting_gps">WAITING FOR GPS</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="choose_unit">Choose Measure Unit</string>
    <string name="delete_session">Do you really want to delete this workout?</string>
    <string name="cancel">Cancel</string>
    <string name="settings_unit_measure_title">Measure Unit</string>
    <string name="settings_unit_measure_dialog_title">Select Measure Unit</string>
    <string name="unit_preferences">Unit Preferences</string>
    <string name="start_time">START TIME</string>
    <string name="finish_time">FINISH TIME</string>
    <string name="total_time">TIME</string>
    <string name="date">DATE</string>
    <string name="average_pace">PACE</string>
    <string name="average_speed">SPEED</string>
    <string name="mph" translatable="false">mph</string>
    <string name="kph" translatable="false">kmh</string>
    <string name="pmi" translatable="false">/mi</string>
    <string name="pkm" translatable="false">/km</string>
    <string name="total_distance">DISTANCE</string>
    <string name="mi" translatable="false">mi</string>
    <string name="km" translatable="false">km</string>
    <string name="interval">Interval</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="pace">Pace</string>
    <string name="speed">Speed</string>
    <string name="end_interval">End</string>
    <string name="start_interval">Start</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="workout">Workout</string>
    <string name="action_delete">Delete</string>
    <string name="kilometres">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="session_name">Name:</string>
    <string name="session_description">Description:</string>
    <string name="settings">Settings</string>
    <string name="date_format">Date Format</string>
    <string name="select_date_format">Select Date Format</string>
    <string name="attributions">Attributions</string>
    <string name="is_tracking_you">is tracking your workout</string>
    <string name="music">Music</string>
    <string name="ddmmyyyy">DD-MM-YYYY</string>
    <string name="mmddyyyy">MM-DD-YYYY</string>
    <string name="yyyymmdd">YYYY-MM-DD</string>
    <string name="save_activity">Do you really want to exit without saving the activity?</string>
    <string name="enable_gps_desc">Please enable the GPS in your device settings</string>
    <string name="enable_gps">Device GPS is not enabled</string>
    <string name="Km" translatable="false">Km</string>
    <string name="Mi" translatable="false">Mi</string>
    <string name="dmy" translatable="false">dmy</string>
    <string name="mdy" translatable="false">mdy</string>
    <string name="ymd" translatable="false">ymd</string>
    <string name="delete">Delete</string>
    <string name="wait">Please wait &#8230;</string>
    <string name="send_to_wear_capability">send_to_wear_capability</string>

        <string-array name="planets_array">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
            <item>Jupiter</item>
            <item>Saturn</item>
            <item>Uranus</item>
            <item>Neptune</item>
        </string-array>
        <string name="drawer_open">Open navigation drawer</string>
        <string name="drawer_close">Close navigation drawer</string>
        <string name="action_websearch">Web search</string>
        <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="permissions_rationale">Permissions are required to continue</string>
    <string name="other_activity">Other</string>
</resources>
