<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/unit_preferences">

        <ListPreference
            android:key="unit_measure"
            android:title="@string/settings_unit_measure_title"
            android:summary="@string/settings_unit_measure_dialog_title"
            android:dialogTitle="@string/settings_unit_measure_dialog_title"
            android:entries="@array/measure_unit_entries"
            android:entryValues="@array/measure_unit_entries_values" />

        <ListPreference
            android:key="date_format"
            android:title="@string/date_format"
            android:summary="@string/select_date_format"
            android:dialogTitle="@string/select_date_format"
            android:entries="@array/date_format_entries"
            android:entryValues="@array/date_format_entries_values"/>

    </PreferenceCategory>

</PreferenceScreen>