<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fragment_workout_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextAppearance="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/fragment_workout_toolbar"
        android:background="@drawable/toolbar_dropshadow"
        android:elevation="1dp"/>

    <fragment
        android:id="@+id/workout_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_below="@+id/fragment_workout_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                style="@style/RaisedGrey">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:dividerPadding="32dp">

                    <Chronometer
                        android:id="@+id/workout_chronometer"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="32sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"/>

                    <TextView
                        android:id="@+id/workout_distance"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="32sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:dividerPadding="32dp">

                    <TextView
                        android:id="@+id/workout_pace"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"/>

                    <TextView
                        android:id="@+id/workout_speed"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:dividerPadding="32dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/pace"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/speed"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/waiting_gps_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:dividerPadding="32dp"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/waiting_gps"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/waiting_gps"
                    android:gravity="center"
                    style="@style/RaisedGrey" />

                <Button
                    android:id="@+id/workout_button_exit_gps"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/exit"
                    style="@style/RaisedRed" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:dividerPadding="32dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone">

                <Button
                    android:id="@+id/workout_button_start"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/start"
                    style="@style/RaisedGreen" />

                <Button
                    android:id="@+id/workout_button_exit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/exit"
                    style="@style/RaisedRed" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lap_pause_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:dividerPadding="32dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone" >

                <Button
                    android:id="@+id/workout_button_lap"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/lap"
                    style="@style/RaisedGreen" />

                <Button
                    android:id="@+id/workout_button_pause"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/pause"
                    style="@style/RaisedGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/resume_finish_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:dividerPadding="32dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone">

                <Button
                    android:id="@+id/workout_button_resume"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/resume"
                    style="@style/RaisedGreen" />

                <Button
                    android:id="@+id/workout_button_finish"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:stateListAnimator="@anim/anim"
                    android:text="@string/finish"
                    style="@style/RaisedRed" />

            </LinearLayout>

        </RelativeLayout>

    </fragment>

</RelativeLayout>